[package]
name = "hidepng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
crc32fast = "1.3"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.3", features = ["cargo", "derive"] }
